Fix static navbar spacing issues

--- a/styles/contact-us.css
+++ b/styles/contact-us.css
@@ -35,6 +35,7 @@
 }
 
 .body-title {
+    margin-top: 15dvh;
     margin-bottom: 3dvh;
 }
 
